@@ -1,0 +1,2 @@
+EXTRA_DIST= ChangeLog Makefile.am README.txt \
+	argz.m4 libtool.m4 ltdl.m4 ltoptions.m4 ltsugar.m4 ltversion.m4
